# aur-check-rebuild

./: .gitignore  Cargo.toml  PKGBUILD  aur-check-rebuild-1.0.0-4-x86_64.pkg.tar.zst  aur-check-rebuild.install  install  settings.json  test
aur-check-rebuild/: config  packed-refs
aur-check-rebuild/objects/pack/: pack-a497f179e94e35c0130cb109dec58e40b09940d7.idx  pack-a497f179e94e35c0130cb109dec58e40b09940d7.pack  pack-a497f179e94e35c0130cb109dec58e40b09940d7.rev
hooks/: zz-aur-check-rebuild-install.hook  zz-aur-check-rebuild-remove.hook  zz-aur-check-rebuild-upgrade.hook  zz-aur-check-rebuild.hook
scripts/: aur-check-rebuild.py  main.py
scripts/helpers/: database.py  libalpm.py  settings.py
src/: main.rs
src/aur_helper/: mod.rs
src/cache/: mod.rs
src/libalpm/: mod.rs
src/loader/: mod.rs
src/lock/: mod.rs
src/settings/: mod.rs
