[package]
name = "aur-check-rebuild"
version = "1.3.0"
edition = "2024"

[dependencies]
cached = "0.59.0"
glob = "0.3.3"
goblin = "0.10.5"
libc = "0.2.186"
once_cell = "1.21.4"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
which = "8.0.2"

[profile.release]
lto = "fat"       # thin or fat
codegen-units = 1
strip = true
opt-level = 3
